--- a/client/public/index.html
+++ b/client/public/index.html
@@ -10,6 +10,7 @@
     <title>React App</title>
   </head>
   <body>
+    <audio id="messageSound" src="./Facebookchat.wav"></audio>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
   </body>
